fixed review comments.